AM_LDFLAGS=-release 2.3 

lib_LTLIBRARIES=libbmdxml.la
libbmdxml_la_SOURCES=libbmdxml.c xmlutils.c
#libbmdxml_la_LIBADD= ../libbmdsql/libbmdsql.la ../libbmd/libbmd.la ../libbmdglobals/libbmdglobals.la
#libbmdxml_la_LIBADD= ../libbmd/libbmd.la ../libbmdglobals/libbmdglobals.la
libbmdxml_la_LIBADD= ../libbmdglobals/libbmdglobals.la
libbmdxml_la_CPPFLAGS= -Wall -Werror

#SUBDIRS=tests
