AM_LDFLAGS=-release 2.3 
lib_LTLIBRARIES		=	libbmdxpath.la
libbmdxpath_la_SOURCES	=	libbmdxpath.c
#libbmdxpath_la_LIBADD	=	../libbmd/libbmd.la
libbmdxpath_la_CPPFLAGS	=	-Wall -Werror -lxml2

#noinst_PROGRAMS=libbmdxpath_test
#libbmdxpath_test_SOURCES=libbmdxpath_test.c
#libbmdxpath_test_LDADD=libbmdxpath.la ../libbmderr/libbmderr.la ../libbmdasn1_common/libbmdasn1_common.la ../libbmdasn1_core/libbmdasn1_core.la ../libbmd/libbmd.la 
#libbmdxpath_test_CPPFLAGS= -Wall -Werror -lxml2 -g
