noinst_PROGRAMS=test_bmd_search_unreceived
#		test_bmd_login \
#		test_bmd_insert \
#		test_bmd_delete \
#		test_bmd_search \
#		test_bmd_search_with_or \
#		test_bmd_download \
#		test_bmd_noop\
#		test_bmd_send_avizo \
#		test_bmd_dvcs \
#		test_bmd_getprf \
#		test_bmd_certify_dvcs \
#		test_bmd_certify_timestamp \
#		test_bmd_certify_document \
#		test_bmd_update \
#		test_bmd_raport \
#		test_bmd_history \
#		test_bmd_verify_cryptoobject_signature

#test_bmd_login_SOURCES=test_bmd_login.c
#test_bmd_login_LDADD = ../../libbmd/libbmd.la

#test_bmd_raport_SOURCES=test_bmd_raport.c
#test_bmd_raport_LDADD = ../../libbmd/libbmd.la

#test_bmd_insert_SOURCES=test_bmd_insert.c
#test_bmd_insert_LDADD = ../../libbmd/libbmd.la

#test_bmd_update_SOURCES=test_bmd_update.c
#test_bmd_update_LDADD = ../../libbmd/libbmd.la

#test_bmd_delete_SOURCES=test_bmd_delete.c
#test_bmd_delete_LDADD = ../../libbmd/libbmd.la

test_bmd_search_unreceived_SOURCES=test_bmd_search_unreceived.c
test_bmd_search_unreceived_LDADD = ../../libbmd/libbmd.la

#test_bmd_search_SOURCES=test_bmd_search.c
#test_bmd_search_LDADD = ../../libbmd/libbmd.la

#test_bmd_history_SOURCES=test_bmd_history.c
#test_bmd_history_LDADD = ../../libbmd/libbmd.la

#test_bmd_search_with_or_SOURCES=test_bmd_search_with_or.c
#test_bmd_search_with_or_LDADD = ../../libbmd/libbmd.la

#test_bmd_download_SOURCES=test_bmd_download.c
#test_bmd_download_LDADD = ../../libbmd/libbmd.la

#test_bmd_noop_SOURCES=test_bmd_noop.c
#test_bmd_noop_LDADD = ../../libbmd/libbmd.la

#test_bmd_send_avizo_SOURCES=test_bmd_send_avizo.c
#test_bmd_send_avizo_LDADD = ../../libbmd/libbmd.la

#test_bmd_dvcs_SOURCES=test_bmd_dvcs.c
#test_bmd_dvcs_LDADD = ../../libbmd/libbmd.la

#test_bmd_getprf_SOURCES=test_bmd_getprf.c
#test_bmd_getprf_LDADD = ../../libbmd/libbmd.la

#test_bmd_certify_dvcs_SOURCES=test_bmd_certify_dvcs.c
#test_bmd_certify_dvcs_LDADD = ../../libbmd/libbmd.la

#test_bmd_certify_timestamp_SOURCES=test_bmd_certify_timestamp.c
#test_bmd_certify_timestamp_LDADD = ../../libbmd/libbmd.la

#test_bmd_certify_document_SOURCES=test_bmd_certify_document.c
#test_bmd_certify_document_LDADD = ../../libbmd/libbmd.la

#test_bmd_verify_cryptoobject_signature_SOURCES=test_bmd_verify_cryptoobject_signature.c
#test_bmd_verify_cryptoobject_signature_LDADD = ../../libbmd/libbmd.la
