noinst_LTLIBRARIES = libbmdaa2_wrappers.la
libbmdaa2_wrappers_la_SOURCES = AC_AlgorithmIdentifier.c \
	    			AC_SecurityCategory.c \
				AC_AttCertValidityPeriod.c    AC_ClassList.c \
				AC_Slot.c 	AC_Clearance.c \
				AC_SignatureValue.c	AC_Attribute.c \
		 		AC_GeneralizedTime.c          AC_Name.c \
	 			AC_UnizetoAttrSyntax.c	AC_GeneralName.c \
		    		AC_OBJECT_IDENTIFIER.c	AC_AttributeTypeAndValue.c \
			     	AC_RDNSequence.c	AC_IA5String.c \
		   		AC_RelativeDistinguishedName.c	AC_IetfAttrSyntax.c \
		      		AC_RoleSyntax.c
libbmdaa2_wrappers_la_CPPFLAGS = -Werror -Wall
